--- a/frontend/jawnt-frontend/app/globals.css
+++ b/frontend/jawnt-frontend/app/globals.css
@@ -16,16 +16,6 @@
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  /* background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb)); */
-}
-
 @layer utilities {
   .text-balance {
     text-wrap: balance;
@@ -37,7 +27,7 @@ nav {
   left: 0;
   top: 0;
   height: 100vh;
-  background-color: rgb(196, 219, 230);
+  background-color: #c0e2f3;
   padding: 20px;
 }
 
@@ -51,6 +41,10 @@ nav a {
   text-decoration: none;
   color: #333;
   padding: 10px;
+}
+
+input {
+  border: #000000;
 }
 
 .banner {
@@ -68,17 +62,23 @@ nav a {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  margin-top: 2rem;
+  margin-top: 1rem;
+  border: #000000;
 }
 
 .requests-table {
   border-collapse: collapse;
-  width: 80%;
-  max-width: 800px;
+  width: 100%;
+  max-width: 1100px;
   margin-top: 1rem;
 }
 
-.requests-table th,
+.requests-table th {
+  padding: 0.75rem;
+  text-align: left;
+  border-bottom: 1px solid #ddd;
+}
+
 .requests-table td {
   padding: 0.75rem;
   text-align: left;
@@ -87,5 +87,67 @@ nav a {
 
 .requests-table th {
   background-color: #f2f2f2;
+}
+
+.submit-request-btn {
+  display: flex;
+  background-color: #007bff;
+  color: #fff;
+  border-radius: 8px;
+  padding: 0.5rem 1rem;
+  font-size: 1rem;
+  cursor: pointer;
+}
+
+.modal {
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 30%;
+}
+
+.close-modal {
+  color: #aaa;
+  float: right;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.close-modal:hover {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.save-request-btn {
+  display: flex;
+  background-color: #007bff;
+  color: #fff;
+  border-radius: 8px;
+  padding: 0.5rem 1rem;
+  font-size: 1rem;
+  cursor: pointer;
+}
+
+.modal-content input[type="text"],
+.modal-content input[type="date"],
+.modal-content input[type="number"] {
+  padding: 0.5rem;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  width: 100%;
+  margin-bottom: 1rem;
 }
 
