--- a/frontend/jawnt-frontend/app/globals.css
+++ b/frontend/jawnt-frontend/app/globals.css
@@ -43,6 +43,19 @@ nav a {
   padding: 10px;
 }
 
+select {
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  background-color: #fff;
+}
+
+select:focus {
+  outline: none;
+  border-color: #888;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+}
+
 .banner {
   height: 100px;
   background-color: hsl(212, 100%, 97%);
@@ -145,5 +158,9 @@ nav a {
   border-radius: 4px;
   width: 100%;
   margin-bottom: 1rem;
+}
+
+.management-tr {
+  cursor: pointer;
 }
 
